[fix] CSS: fix mat form fiel prefix alignment

--- a/src/global.scss
+++ b/src/global.scss
@@ -138,12 +138,14 @@ form.form-container {
   mat-form-field {
     width: 100%;
     font-size: 16px !important;
+
+    ion-icon[matPrefix],
+    mat-icon[matPrefix] {
+      margin-left: 5px;
+      margin-right: 5px;
+    }
   }
 
-  mat-form-field [matPrefix] {
-    padding-left: 5px;
-    padding-right: 5px;
-  }
 
   ion-col > ion-label {
     color: var(--ion-color-primary100);
